--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1"
   }
 }
